--- a/app/templates/add_instruments.html
+++ b/app/templates/add_instruments.html
@@ -123,7 +123,8 @@
             <div class="field-row">
                 <label class="field-label">Selected</label>
                 <div id="selected-list" class="selected-list"></div>
-                <p class="helper">Helsinki uses .HE (e.g., NOKIA.HE). Stockholm uses .ST (e.g., HM-B.ST). US tickers use no suffix (e.g., AAPL).</p>
+                <p class="helper">Helsinki uses .HE (e.g., NOKIA.HE). Stockholm uses .ST (e.g., HM-B.ST). US tickers use
+                    no suffix (e.g., AAPL).</p>
             </div>
 
             <input type="hidden" name="symbols_text" id="symbols-text" />
