--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -4,6 +4,14 @@
 
 {% block extra_css %}
 <style>
+    body {
+        overflow: hidden;
+    }
+
+    main {
+        overflow: hidden;
+    }
+
     .detail-header {
         display: flex;
         justify-content: space-between;
