--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -5,11 +5,11 @@
 {% block extra_css %}
 <style>
     body {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     main {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     .detail-header {
